feat: enhance TestController with detailed rule testing and response models